--- a/WPFSendMail/MailSender/View/RecipientsEditor.xaml
+++ b/WPFSendMail/MailSender/View/RecipientsEditor.xaml
@@ -5,9 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
              xmlns:local="clr-namespace:MailSender.View"
              xmlns:validation="clr-namespace:MailSender.ValidationRules"
+             xmlns:converters="clr-namespace:MailSender.Converters"
+             xmlns:cc="clr-namespace:System.Windows.Converters;assembly=WindowsBase"
              DataContext="{Binding MainViewModel, Source={StaticResource Locator}}"
              d:DesignHeight="365" d:DesignWidth="270">
-    <Grid Margin="3">
+    <UserControl.Resources>
+        <converters:ValidationEnableConverter x:Key="ValidationEnableConverter"/>
+    </UserControl.Resources>
+
+    <Grid Margin="3" Name="Control">
         <!-- Обработчик события ошибок валидации Validation.Error="OnDataValidationError" -->
         <Grid.Resources>
             <Style TargetType="{x:Type TextBox}">
@@ -33,6 +39,19 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style TargetType="Button">
+                <Setter Property="IsEnabled" Value="False"/>
+                <Style.Triggers>
+                    <MultiDataTrigger>
+                        <MultiDataTrigger.Conditions>
+                            <Condition Binding="{Binding Path=(Validation.HasError), ElementName=id}" Value="False"/>
+                            <Condition Binding="{Binding Path=(Validation.HasError), ElementName=name}" Value="False"/>
+                            <Condition Binding="{Binding Path=(Validation.HasError), ElementName=email}" Value="False"/>
+                        </MultiDataTrigger.Conditions>
+                        <Setter Property="IsEnabled" Value="True"/>
+                    </MultiDataTrigger>
+                </Style.Triggers>
+            </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -49,11 +68,11 @@
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Имя"/>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="Email"/>
 
-        <TextBox Grid.Column="1" Grid.Row="0" 
+        <TextBox Grid.Column="1" Grid.Row="0" Name="id"
                  Text="{Binding SelectedRecipient.Id, NotifyOnValidationError=True}"/>
-        <TextBox Grid.Column="1" Grid.Row="1" 
+        <TextBox Grid.Column="1" Grid.Row="1" Name="name"
                  Text="{Binding SelectedRecipient.Name, NotifyOnValidationError=True, ValidatesOnDataErrors=True, ValidatesOnExceptions=True}"/>
-        <TextBox Grid.Column="1" Grid.Row="2">
+        <TextBox Grid.Column="1" Grid.Row="2" Name="email">
             <TextBox.Text>
                 <Binding Path="SelectedRecipient.Email" NotifyOnValidationError="True">
                     <Binding.ValidationRules>
@@ -70,7 +89,9 @@
                      VerticalAlignment="Top" HorizontalAlignment="Center"
                      Rows="1">
             <Button Padding="15,7" Margin="5">Создать</Button>
-            <Button Padding="15,7" Margin="5" Command="{Binding SaveChangesCommand}">Сохранить</Button>
+            <Button Padding="15,7" Margin="5" Command="{Binding SaveChangesCommand}" 
+                    Content="Сохранить">
+            </Button>
         </UniformGrid>
     </Grid>
 </UserControl>
